# restitch

./: .gitignore  Cargo.toml  LICENSE  README.md  config_targets.toml
man/: restitch.1
scripts/: package.sh
src/: config.rs  detectors.rs  main.rs  packager.rs  restore.rs  revert.rs  tui.rs
